samples/_failures_safe/1761398201_6c6520_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7540dcd.c: In function ‘main’:
./samples/SAFE/__tmp_d7540dcd.c:153:16: error: missing terminating " character
  153 |         printf("
      |                ^
./samples/SAFE/__tmp_d7540dcd.c:153:9: error: expected expression at end of input
  153 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_d7540dcd.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d7540dcd.c:153:9: error: expected declaration or statement at end of input
